Informacion de la segunda seccion

--- a/PRIMER PROYECTO/index.html
+++ b/PRIMER PROYECTO/index.html
@@ -49,6 +49,43 @@
         </div>
       </div>
     </header>
+
+    <!--Informacion-->
+    <div class="contenedor">
+      <main class="contenido-principal clearfix">
+        <h2 class="encabezado">
+          Ayuda al Planeta<spam>Eres Parte de el</spam
+          ><img src="img/img/planta.svg" class="planta" />
+        </h2>
+
+        <div class="contenedor-grid">
+          <div class="imagen-principal columnas2-4">
+            <img
+              src="img/img/sidebar.jpg"
+              alt="Imagen Principal"
+              class="efecto-imagen"
+            />
+          </div>
+
+          <div class="contenido-principal columnas2-4">
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam
+              explicabo ducimus voluptate distinctio magni accusamus molestiae,
+              dolorum facilis eum eos quaerat tempore recusandae, alias porro
+              ipsum omnis autem quos sed?
+            </p>
+            <blockquote>El planeta te necesita!</blockquote>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
+              voluptates voluptatibus corrupti architecto quos quam odit
+              expedita, esse sed cupiditate reiciendis? Vero illo est
+              praesentium repudiandae aliquid doloribus voluptatem aliquam!
+            </p>
+          </div>
+        </div>
+      </main>
+    </div>
+
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
